    when EOF was OK.
  o Change libst to use two new data types: st_sample_t and st_size_t.
    This allows for better support and maintaince on 64-bit machines.
  o Silence effect was broken on stereo files.  Also, made thresholds
    relative to original bit percision of audio data.  When 16-bit audio
    is scaled up to 32-bits, a little bit of noise starts to look like a
    large amplitude of noise.
  o Changed Floats into a type of encoding instead of a size of audio data.
  o Put a flush at the end of OSS driver so that no old data would be
    left in internal buffers after changing audio format parameters.
  o Fixed problem were play script wasn't installed correctly if you
    build from another directory (pointed out by Mike Castle).

sox-12.17.2
-----------
  o Daniel Culbert found and fixed a bug in the polyphase effect
    that occurs on platforms that rand() can return large values.
    The bug resulted in polyphase resampling an audio file to a
    different rate then it said it was.
  o Stan Seibert contributed a handler for Ogg Vorbis files.  It
    handles all input formats but can only save using default
    settings.
  o Darrick Servis has made major cleanups in the code in regards
    to error conditions.  Helps people using libst.
  o Darrick Servis has added added optional seek functionality sox.
    Several formats have been modified to make use of this.
  o Geoff Kuenning rewrote the average effect into a general-purpose
    parametric mapping from N channels to M channels.
  o Geoff Kuenning added an optional delay-time parameter to the compander
    effect to allow companding to effectively operate based on future
    knowledge.
  o Geoff Kuenning Added support to fade and trim effect for specifying time
    in hh:mm:ss.frac format.
    Fixed a bug that caused integer overflow when large start/stop times
    were used.
  o Geoff Kuenning updated play/rec/soxeffect scripts to handle all effects